--- a/src/Keylogger.vcxproj
+++ b/src/Keylogger.vcxproj
@@ -18,6 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="configuration.h" />
+    <ClInclude Include="constants.h" />
     <ClInclude Include="keyboard.h" />
     <ClInclude Include="keylogger.h" />
     <ClInclude Include="registry.h" />
