--- a/src/Keylogger.vcxproj
+++ b/src/Keylogger.vcxproj
@@ -112,7 +112,7 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>User32.lib;Advapi32.lib;</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
