--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,5 @@
-os: 
+image: 
   - Visual Studio 2017
 
 environment:
   Configuration: Release
-
-build_script:
-  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
