--- a/src/Keylogger.vcxproj
+++ b/src/Keylogger.vcxproj
@@ -82,8 +82,7 @@
       <ConformanceMode>true</ConformanceMode>
       <EnablePREfast>true</EnablePREfast>
       <PrecompiledHeaderFile />
-      <LanguageStandard>
-      </LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <DisableSpecificWarnings>26485;26426;26490;26429;26481;26472;</DisableSpecificWarnings>
       <TreatWarningAsError>true</TreatWarningAsError>
@@ -106,8 +105,7 @@
       <ConformanceMode>true</ConformanceMode>
       <EnablePREfast>true</EnablePREfast>
       <PrecompiledHeaderFile />
-      <LanguageStandard>
-      </LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <DisableSpecificWarnings>26485;26426;26490;26429;26481;26472;</DisableSpecificWarnings>
       <TreatWarningAsError>true</TreatWarningAsError>
